--- a/云计算/KubeFlow/Pytorch-Operator/Issue/1. Pytorch-Operator get service is nil always.md
+++ b/云计算/KubeFlow/Pytorch-Operator/Issue/1. Pytorch-Operator get service is nil always.md
@@ -1,167 +1,142 @@
 <!-- TOC -->
 
 - [1. 问题描述](#1-问题描述)
-    - [1.1 典型问题](#11-典型问题)
-- [2. 问题分析](#2-问题分析)
-    - [2.1 分析minis代码](#21-分析minis代码)
-    - [2.2 问题推测](#22-问题推测)
-        - [2.2.1 查看数据集](#221-查看数据集)
-- [3. 问题解决](#3-问题解决)
-- [4. 创建pytorh-job yaml文件样例](#4-创建pytorh-job-yaml文件样例)
+- [2. 问题梳理](#2-问题梳理)
+    - [2.1 该问题危害](#21-该问题危害)
+- [3. 信息收集](#3-信息收集)
+    - [3.1 getServer 过程涉及到Issue42639](#31-getserver-过程涉及到issue42639)
+        - [3.1.1 kubernetes 垃圾回收](#311-kubernetes-垃圾回收)
+            - [3.1.1.1 Owners and dependents](#3111-owners-and-dependents)
+            - [3.1.1.2 Controlling how the garbage collector deletes dependents](#3112-controlling-how-the-garbage-collector-deletes-dependents)
+        - [3.1.2 该Issue描述的主要问题](#312-该issue描述的主要问题)
+        - [3.1.3 社区暂时解决方案](#313-社区暂时解决方案)
+        - [3.1.4 ObservedGeneration 根本解决方案](#314-observedgeneration-根本解决方案)
+        - [3.1.4 Adopt](#314-adopt)
+- [4. 问题定位和分析](#4-问题定位和分析)
+- [5. 扩展](#5-扩展)
+    - [5.1 service 作用](#51-service-作用)
+    - [5.2 打断点 为什么一段时间会崩掉](#52-打断点-为什么一段时间会崩掉)
 
 <!-- /TOC -->
-
 # 1. 问题描述
-* pytorch-operator 0.7 版本复现mnist 训练
-* 网络环境存在限制（github 龟速）
-* 训练时而很快成功，时而长时间阻塞
-* pod 越多，阻塞的概率越大
+* controller.go 文件中 services, err := pc.GetServicesForJob(job) 获取service多次出现nil,但是PTJob对应的service应该是存在的
+* 打断点定位到controllerRef := metav1.GetControllerOf(obj)，发现返回的经常是nil，Objec是service，预期是server 依赖于PTJob
+* kubectl get service -o yaml发现service并没有ownReference内容，但是createServices函数使用了reference
+* 打断点非常奇怪现象：第一次运行controller，所有的reference都有ownReference PTjob。第二次进入同步函数之后，所有的ownReference都是nil。尝试第三次进入，查看端点信息，controller崩溃退出。如果没有任何断点，debug会有大量的error：Error creating: services \"parrots-dist-mnist-nccl-master-0\" already exists"
 
-## 1.1 典型问题
-* 2pod 任务长时间阻塞
-![](./images/2020-03-07-14-42-50.png)
-![](./images/2020-03-07-14-44-36.png)
-# 2. 问题分析
-* 出现问题时猜想主要问题应该在mnist训练代码上，因为pod running状态，并且有训练成功情况
-## 2.1 分析minis代码
-过程如下
-* 判断参数是否使用cuda
-* 判断是否是分布式训练
-* 设置train_loader和test_loader，在线下载训练集
-* 向GPU或cpu通信
-* 如果是联合训练，就阻塞式等待数据同步
-* 训练、测试
-* 保存训练模型
-```
-def main():
-.......
-    if use_cuda:
-        print('Using CUDA')
+# 2. 问题梳理
+* 问什么kubectl get service -o yaml没有发现ownReference信息
+* debug 打断点为什么会崩掉，不打端点为什么只是报错，没有崩掉
+* 为甚第一次运行的时候，debug能看到ownReference，之后就看不到
 
-    writer = SummaryWriter(args.dir)
+## 2.1 该问题危害
+* 影响pytorch-operator 的运行逻辑
+* err导致每个pyjob都是出队之后立马入队，pyjob很多之后势必会影响性能
 
-    torch.manual_seed(args.seed)
-
-    device = torch.device("cuda" if use_cuda else "cpu")
-
-    if should_distribute():
-        print('Using distributed PyTorch with {} backend'.format(args.backend))
-        dist.init_process_group(backend=args.backend)
-    print("0000000000")
-    kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}
-    train_loader = torch.utils.data.DataLoader(
-        datasets.MNIST('./dataset', train=True, download=True,
-                       transform=transforms.Compose([
-                           transforms.ToTensor(),
-                           transforms.Normalize((0.1307,), (0.3081,))
-                       ])),
-        batch_size=args.batch_size, shuffle=True, **kwargs)
-    test_loader = torch.utils.data.DataLoader(
-        datasets.MNIST('./dataset', train=False, transform=transforms.Compose([
-                           transforms.ToTensor(),
-                           transforms.Normalize((0.1307,), (0.3081,))
-                       ])),
-        batch_size=args.test_batch_size, shuffle=False, **kwargs)
-    print("1111111111")
-    model = Net().to(device)
-    print("2222222222")
-
-    if is_distributed():
-        Distributor = nn.parallel.DistributedDataParallel if use_cuda \
-            else nn.parallel.DistributedDataParallelCPU
-        model = Distributor(model)
-
-    optimizer = optim.SGD(model.parameters(), lr=args.lr, momentum=args.momentum)
-    print("3333333333")
-    for epoch in range(1, args.epochs + 1):
-        train(args, model, device, train_loader, optimizer, epoch, writer)
-        test(args, model, device, test_loader, writer, epoch)
-    print("444444444444")
-    if (args.save_model):
-        torch.save(model.state_dict(),"mnist_cnn.pt")
-    print("55555555555")
-        
-if __name__ == '__main__':
-    main()
-
-```
-## 2.2 问题推测
-* 根据1.1 问题和2.1 代码问题，我们猜想
-* worker-0 pod 阻塞是因为download数据集出现问题
-* master-0 pod 数据集下载完毕，但是因为等待work-0 同步导致训练阻塞
-* 联合训练中，只要一个pod阻塞，导致所有pod阻塞
-
-### 2.2.1 查看数据集
-* 由于master-0 pod成功下载数据集，首先find到数据集路径
-* 对比master pod，我们发现worker pod 数据集没有下载完毕
-* 但是很奇怪我们使用wget很快就下载了数据集，不知道为什么代码下载那么慢，但是这不影响思路
-![](./images/2020-03-07-14-56-31.png)
-![](./images/2020-03-07-14-56-38.png)
-![](./images/2020-03-07-14-56-46.png)
+# 3. 信息收集
+## 3.1 getServer 过程涉及到Issue42639
+* Issue提出时间是Mar 7, 2017
+https://github.com/kubernetes/kubernetes/issues/42639
 
 
-# 3. 问题解决
-* 解决基本思路是离线训练
-* 修改mnist代码
-    * 首先改变数据集路径
-    * 然后download设置为False
-* 重新build镜像，dataset是我们下载完毕的数据集
-```
-FROM pytorch/pytorch:1.0-cuda10.0-cudnn7-runtime
+### 3.1.1 kubernetes 垃圾回收
+https://kubernetes.io/docs/concepts/workloads/controllers/garbage-collection/
 
-RUN pip install tensorboardX==1.6.0
-WORKDIR /var
-ADD mnist.py /var
-ADD dataset /var/dataset
+* kubernetes 垃圾回收是删除原来有所有者，但是现在没有所有者的kubernetes 对象
+* 在kubernetes1.8 以后，很多对象自动设置ownerReference的内容
 
-# ENTRYPOINT ["python", "/var/mnist.py"]
-```
-* 修改job.yaml，创建pytorch job
+#### 3.1.1.1 Owners and dependents
+以replicaSet为例，replicaSet对象中包含多个pod。那么
+* replicaSet是pod的Owner（所有者）
+* pod是 replicaSet的从者
 
-# 4. 创建pytorh-job yaml文件样例
-```
-apiVersion: "kubeflow.org/v1"
-kind: "PyTorchJob"
-metadata:
-  name: "pytorch-dist-mnist-nccl"
-spec:
-  pytorchReplicaSpecs:
-    Master:
-      replicas: 1
-      restartPolicy: OnFailure
-      template:
-        metadata:
-          annotations:
-            scheduling.k8s.io/group-name: "parrots-dist-mnist-nccl"
-      template:
-        schedulerName: sense-rubber
-        spec:
-          containers:
-            - name: pytorch
-              image: xiaoluwwwxiaolu/pytorch-operator-nccl:v1.1
-              command: ["python"]
-              args: ["/var/mnist.py","--backend", "nccl"]
-              resources: 
-                limits:
-                  nvidia.com/gpu: 1
-    Worker:
-      replicas: 3
-      restartPolicy: OnFailure
-      template:
-        metadata:
-          annotations:
-            scheduling.k8s.io/group-name: "parrots-dist-mnist-nccl"
-      template:
-        schedulerName: sense-rubber
-        spec:
-          containers: 
-            - name: pytorch
-              image: xiaoluwwwxiaolu/pytorch-operator-nccl:v1.1
-              command: ["python"]
-              args: ["/var/mnist.py","--backend", "nccl"]
-              resources: 
-                limits:
-                  nvidia.com/gpu: 1
-```
+#### 3.1.1.2 Controlling how the garbage collector deletes dependents
+
+* Deleting dependents automatically is called cascading deletion. （级联删除）
+* There are two modes of cascading deletion: background and foreground（两种方式删除）
+* If you delete an object without deleting its dependents automatically, the dependents are said to be orphaned.
+
+* Foreground cascading deletion
+    * Once the “deletion in progress” state is set, the garbage collector deletes the object’s dependents. Once the garbage collector has deleted all “blocking” dependents (objects with ownerReference.blockOwnerDeletion=true), it deletes the owner object.
+    * Note that in the “foregroundDeletion”, only dependents with ownerReference.blockOwnerDeletion=true block the deletion of the owner object.
+    * Kubernetes version 1.7 added an admission controller that controls user access to set blockOwnerDeletion to true based on delete permissions on the owner object, so that unauthorized dependents cannot delay deletion of an owner object.
+
+* Background cascading deletion
+    * In background cascading deletion, Kubernetes deletes the owner object immediately and the garbage collector then deletes the dependents in the background.
+    * In Kubernetes 1.9, for all kinds in the apps/v1 group version, dependent objects are deleted by default.
+
+### 3.1.2 该Issue描述的主要问题
+The GC expects that once it sees a controller with a non-nil
+DeletionTimestamp, that controller will not attempt any adoption.
+There was a known race condition that could cause a controller to
+re-adopt something orphaned by the GC, because the controller is using a
+cached value of its own spec from before DeletionTimestamp was set.
+
+我的理解如下：
+* 当控制器对象出现删除时间戳时，垃圾回收机制希望控制器不要进行任何adoption dependent objects操作。（因为垃圾回收机制会orphaned dependent objects）
+* 但是，控制器使用的是本地cache，在控制器cache同步到DeletionTimestamp之前，控制器会不断的re-adopt dependent objects，而垃圾回收会不停的orphaned dependent objects，这样垃圾回收机制和控制器造成了一种竞争。
+
+
+### 3.1.3 社区暂时解决方案
+This fixes that race by doing an uncached quorum read of the controller
+spec just before the first adoption attempt. It's important that this
+read occurs after listing potential orphans. Note that this uncached
+read is skipped if no adoptions are attempted 
+
+* 首先列出所有潜在的orphans dependent objects
+* 在控制器第一次尝试adoption操作时通过非cache 仲裁方式读取字段
+* 如果没有adoptions，uncached read操作是不会进行的
+
+### 3.1.4 ObservedGeneration 根本解决方案
+* 3.1.3 解决的方式比较简单，但是缺点是基本上行每一个控制器中都需要添加这部分代码，这显然有很强的代码侵入性
+* 社区提出更加改进的方案是增加一个ObservedGeneration机制去同步owner和dependent controller
+* 社区连接 https://github.com/kubernetes/kubernetes/issues/26120（还没有仔细分析）
+
+### 3.1.4 Adopt
+* 上文中多次提到Adopt操作，那么Adopt具体是什么呢？
+* 源码连接：https://github.com/kubernetes/kubernetes/blob/master/pkg/controller/controller_ref_manager.go#L310
+
+* Adopt操作分三步：
+    * 一是判断dependent对象是否可以被Adopt
+    * 而是生成patchBytes，内容是dependent object OwnReference内容
+    * 最后是将OwnReference 内容添加到dependent object中
+* Adopt就是添加OwnReference内容
+
+
+# 4. 问题定位和分析
+* 通过分析发现：ClaimServices 中controller service label和具体的server label中不匹配，所以执行match（）时总是会返回false
+* 让match（）返回false，ClaimObject（）会relsease 掉 service 的Ownreference
+* 不匹配的标签是ControllerNameLabel，这是因为tf-operator 最新版本新增了这个标签，pytorch-Operator 也增加了这个标签 https://github.com/kubeflow/tf-operator/issues/1066
+* 查看createService源码，发现并没有任何问题
+* delete ptjob，然后create，发现Service并没有删除。并且service是就旧版本service，因为新版本service label发生变化，并且worker不再有service
+![](2019-11-10-17-21-57.png)
+* 测试: 删除service，重新创建PTjon
+    * 之前不停创建service错误不再出现，能正常获取service
+    * 新的service label和社区同步
+    * ownerReference：内容出现，由adopt函数实现
+    * 删除PTJob，service被删除，说明0.7 版本server 和PTJob是向后级联删除
+
+
+# 5. 扩展
+## 5.1 service 作用
+* service和ip通过label动态绑定
+    * 参见k8s中service模块介绍
+* Pytorch-Operator中为什么通过service 访问master pod
+    * 该master server是headless service
+    * headless service 没有EndPoint，通过service name能直接访问到master pod
+* 参考之前设计的mpirun-controller
+    * master service设计的service很有意思，按理说，我们先需要获取master ip，然后倒入到worker pod中
+    * 但是，有了service，我们能根据固定service name访问到master pod，这样能简化代码，参考之前我们写的mpi-Controller，在worker等待所有pod起来之前做了很多工作，但是通过service能解决这个问题
+    * 先后启动的问题，可以除了service，还必须要和容器的init功能才能实现
+* 总之，master service和Container init结合起来能很好的实现先后启动的问题
+## 5.2 打断点 为什么一段时间会崩掉
+【待解决】
+
+
+
+
+
+
+
 
 
