doc(pytorch-operator):test topygpu and block

--- a/云计算/KubeFlow/Pytorch-Operator/test/1. test topogpu and block.md
+++ b/云计算/KubeFlow/Pytorch-Operator/test/1. test topogpu and block.md
@@ -1,5 +1,18 @@
-测试pytorch-operator 1.1
-sense-rubber 0.7
+<!-- TOC -->
+
+- [1. 测试拓扑敏感](#1-测试拓扑敏感)
+    - [1.1 环境描述](#11-环境描述)
+    - [1.2 任务描述](#12-任务描述)
+    - [1.3 测试用例(拓扑感知)](#13-测试用例拓扑感知)
+        - [1.3.1 单独执行py1](#131-单独执行py1)
+        - [1.3.2 单独执行py](#132-单独执行py)
+        - [1.3.3 先执行py1，然后执行py任务](#133-先执行py1然后执行py任务)
+        - [1.3.4 单独执行py2](#134-单独执行py2)
+    - [1.3 测试用例(阻塞)](#13-测试用例阻塞)
+        - [1.3.1 分别执行py3、py4、py5 任务](#131-分别执行py3py4py5-任务)
+    - [1.3.2 1.3.1 中接着删除py4](#132-131-中接着删除py4)
+
+<!-- /TOC -->
 
 # 1. 测试拓扑敏感
 ## 1.1 环境描述
