--- a/云计算/k8s/Kubernetes源码分析/5.kube-controller-manage/1. 源码分析.md
+++ b/云计算/k8s/Kubernetes源码分析/5.kube-controller-manage/1. 源码分析.md
@@ -213,7 +213,7 @@ pkg/controller/
 ## 2.2 kube-controller-manage 如何启动各种controllers
 kube-controller-manager使用cobra.Command工具作为启动入口，cobra.Command可以自定义Run function(实现run controllers 逻辑)，当执行command.Execute()时会调用前面的Run func。
 
-在实现启动controllers时，kube-controller-manager使用白名单机制，所有的启动controllers都实现通过map[string]ControllerRunFunc 预先定义好。
+在实现启动controllers时，kube-controller-manager使用白名单机制，所有的启动controllers都事先通过map[string]ControllerRunFunc 预先定义好。
 ### 2.2.1 cobra.Command 分析
 kube-controller-manager 借助 cobra.Command工具，理解kube-controller-manager前提是清楚cobra.Command 运行逻辑。
 #### 2.2.1.1 main 分析
@@ -270,9 +270,9 @@ func NewControllerManagerCommand() *cobra.Command {
 
 #### 2.2.1.3 command.Execute()
 command.Execute() 是cobra.Command实现的，kube-controller-mananger只是调用，实现了cobra.Command逻辑。
-    * ExecuteC() 总是先执行父cobra.Command，饭后返回子cobra.Command
-    * Execute() 并没有递归执行cobra.Command，因此kube-controller-manage必须是root cobra.Command
-    * cmd.execute(flags) 是每个cobra.Command 执行逻辑
+* ExecuteC() 总是先执行父cobra.Command，然后返回子cobra.Command
+* Execute() 并没有递归执行cobra.Command，因此kube-controller-manage必须是root cobra.Command
+* cmd.execute(flags) 是每个cobra.Command 执行逻辑
 ```
 func (c *Command) Execute() error {
 	_, err := c.ExecuteC()
@@ -338,6 +338,7 @@ func (c *Command) execute(a []string) (err error) {
 cobra.Command.Run 主要做了两件事情
 * Start the controller manager HTTP server,启动Profiling和Prometheus Exporter
 * 单点或者多点执行定义的run fuc（具体实现启动run controllers）
+```
 // Run runs the KubeControllerManagerOptions.  This should never exit.
 func Run(c *config.CompletedConfig, stopCh <-chan struct{}) error {
 	....
@@ -394,6 +395,7 @@ func Run(c *config.CompletedConfig, stopCh <-chan struct{}) error {
 	})
 	panic("unreachable")
 }
+```
 
 run func：
 * 首先CreateControllerContext
