--- a/云计算/k8s/Kubernetes源码分析/5.kube-controller-manage/1. 源码分析.md
+++ b/云计算/k8s/Kubernetes源码分析/5.kube-controller-manage/1. 源码分析.md
@@ -29,7 +29,7 @@
 # 1. 研究背景
 kubernetes版本：release-1.15
 
-分析kube-controller-manage源码出于以下问题：
+分析kube-controller-manager源码出于以下问题：
 * 如何start所有controllers
 * start controllers如何体现各自差异，比如传递参数，校验，返回结果处理等
 * 体会架构的特点
