--- a/文档编写/软件分析与设计/1. 如何写模块概要设计.md
+++ b/文档编写/软件分析与设计/1. 如何写模块概要设计.md
@@ -181,7 +181,7 @@ ER diagram can be used to represent dependences.
 
 #### 3.2.3.1   Module/Subsystem Interfaces 模块 / 子系统接口
 This section describes interfaces of Module/Subsystem Interfaces 。本节描述模块 / 子系统的接口。
-1   Interfaces Provided by Module/Subsystem 1  模块 / 子系统 1 提供的接口
+1   Interfaces Provided by Module/Subsystem 
 For interface function, following format should be used:
 ```
 Interface 1:
@@ -190,8 +190,9 @@ Input:
 Output:
 Return: Describes the return value of the function
 Description: Describes the objective of the interface.
-对于接口函数，可以采用以下形式描述：
 ```
+1  模块 / 子系统 1 提供的接口
+对于接口函数，可以采用以下形式描述：
 ```
 接口 1 ：
 形式：
@@ -206,9 +207,11 @@ Description: Describes the objective of the interface.
 This section describes interfaces of process 。本节描述进程的接口。
 1   Process 1 Description 进程 1 描述
 The interfaces between the processes describe the shared memory, protocol data and messages, etc.
+
 进程间的接口主要是描述一些共享内存，协议数据，消息等。
+按照以下格式描述：
 ```
-Describe as follows  按照以下格式描述：
+Describe as follows  
 Identification  标识：
 Type  类型：
 Purpose 目的：
