--- a/文档编写/软件分析与设计/2. controller-manager 概要设计.md
+++ b/文档编写/软件分析与设计/2. controller-manager 概要设计.md
@@ -17,6 +17,11 @@
         - [2.2.2 依赖性描述](#222-依赖性描述)
             - [2.2.2.1 运行时设计](#2221-运行时设计)
             - [2.2.2.2 数据依赖关系](#2222-数据依赖关系)
+        - [2.2.3 接口描述](#223-接口描述)
+            - [2.2.3.1 模块/子系统接口](#2231-模块子系统接口)
+            - [2.2.3.2 Process Interfaces 进程接口](#2232-process-interfaces-进程接口)
+    - [2.3 第二层设计描述](#23-第二层设计描述)
+        - [2.3.1 QueueController](#231-queuecontroller)
 
 <!-- /TOC -->
 # Sense-Rubber controller-manager 概要设计
@@ -173,3 +178,54 @@ cx已经完成
 
 #### 2.2.2.2 数据依赖关系
 ![](./images/2020-05-20-18-01-23.png)
+
+### 2.2.3 接口描述
+#### 2.2.3.1 模块/子系统接口
+```
+接口标识 ：1
+接口名称：cmd参数解析
+形式：模块
+输入：cmd flag string
+输出：nil
+返回：controllers启动参数options
+描述：解析cmd参数，并对参数进行校验
+```
+
+
+```
+接口标识 ：2
+接口名称：准备Start Controllers
+形式：模块
+输入：Options
+输出：nil
+返回：ControllerContext
+描述：使用Options生成启动Controller所需要的ControllerContext(会话内容)
+```
+
+```
+接口标识 ：3
+接口名称：Run QueueController
+形式：子系统
+输入：ControllerContext成员变量
+输出：nil
+返回：debugHandler、err
+描述：执行QueueController
+```
+#### 2.2.3.2 Process Interfaces 进程接口
+```
+标识：1
+名称：controller-manager 启动
+类型：goRoutine
+目的：启动controllers
+功能列表：解析参数、启动所有controllers
+```
+```
+标识：2
+名称：QueueController
+类型：goRoutine
+目的：维护Queue实例
+功能列表：同步NS和Queue、维护Queue状态
+```
+
+## 2.3 第二层设计描述
+### 2.3.1 QueueController
