--- a/文档编写/软件分析与设计/2. controller-manager 概要设计.md
+++ b/文档编写/软件分析与设计/2. controller-manager 概要设计.md
@@ -21,17 +21,27 @@
             - [2.2.3.1 模块/子系统接口](#2231-模块子系统接口)
             - [2.2.3.2 Process Interfaces 进程接口](#2232-process-interfaces-进程接口)
     - [2.3 第二层设计描述](#23-第二层设计描述)
-        - [2.3.1 QueueController](#231-queuecontroller)
-            - [2.3.1.1 模块/子系统分解](#2311-模块子系统分解)
-            - [2.3.1.2 并发进程处理分解](#2312-并发进程处理分解)
-            - [2.3.1.3 数据分解](#2313-数据分解)
-        - [2.3.2  依赖性描述](#232--依赖性描述)
-            - [2.3.2.1 运行设计](#2321-运行设计)
-            - [2.3.2.2 数据依赖关系](#2322-数据依赖关系)
-        - [2.3.3 接口描述](#233-接口描述)
-            - [2.3.3.1 模块/子系统接口](#2331-模块子系统接口)
-            - [2.3.3.2 进程接口](#2332-进程接口)
+        - [2.3.1 controller-manager](#231-controller-manager)
+            - [2.3.1.1 分解描述](#2311-分解描述)
+                - [2.3.1.1.1  模块/子系统分解](#23111--模块子系统分解)
+                - [2.3.1.1.2 并发进程处理分解](#23112-并发进程处理分解)
+                - [2.3.1.1.3 数据分解](#23113-数据分解)
+            - [2.3.1.2  依赖性描述](#2312--依赖性描述)
+                - [2.3.1.2.1 运行设计](#23121-运行设计)
+                - [2.3.1.2.2 数据依赖关系](#23122-数据依赖关系)
+        - [2.3.2 QueueController](#232-queuecontroller)
+            - [2.3.2.1 数据分解](#2321-数据分解)
+                - [2.3.2.1.1 模块/子系统分解](#23211-模块子系统分解)
+                - [2.3.2.1.2 并发进程处理分解](#23212-并发进程处理分解)
+                - [2.3.2.1.3 数据分解](#23213-数据分解)
+            - [2.3.2.2  依赖性描述](#2322--依赖性描述)
+                - [2.3.2.2.1 运行设计](#23221-运行设计)
+                - [2.3.2.2.2 数据依赖关系](#23222-数据依赖关系)
+            - [2.3.2.3 接口描述](#2323-接口描述)
+                - [2.3.2.3.1 模块/子系统接口](#23231-模块子系统接口)
+                - [2.3.2.3.2 进程接口](#23232-进程接口)
 - [3. 写文档时疑惑的地方](#3-写文档时疑惑的地方)
+- [4. 改进](#4-改进)
 
 <!-- /TOC -->
 # Sense-Rubber controller-manager 概要设计
@@ -44,7 +54,7 @@
 # 1. 简介
 ## 1.1 目的
 本文档定位是controller-manager概要设计文档，是为了方便用户理解kube-controller设计思路、主要模块、模块的功能以及模块之间的依赖关系。
-本文档描述内容并不包含controller-manager设计的详细内容。
+本文档描述内容并不包含controller-manager的详细设计内容。
 
 ## 1.2 范围
 ### 1.2.1 软件名称
@@ -62,9 +72,9 @@ controller-manager 是我们根据自身sense-ruuber调度需求实现的k8s 控
 cx已经完成
 ## 2.2  第一层设计描述
 如图一是Controller-Manager的层次分解图，每部分的功能描述如下：
-* Controller-Manager 是所有控制器的执行入口。在cmd中获取所有控制器的参数，然后使用参数New Controller实例并且异步执行。
-* Queue-Controller：是Controller-Manager启动的controller之一。主要是维护queue，实例的状态，特别是Resource和Job。
-* PodGroup-Controller: 这部分是Controller-Manage人启动的controller之一。主要是用来维护PodGroup实例状态。
+* controller-manager 是所有控制器的执行入口。在cmd中获取所有控制器的参数，然后使用参数New Controller实例并且异步执行。
+* queue-Controller：是Controller-Manager启动的controller之一。主要是维护queue实例的状态，特别是Resource和Job。
+* PodGroup-controller: 这部分是Controller-Manage启动的controller之一。主要是用来维护PodGroup实例状态。
 ![](./images/2020-05-20-22-32-40.png)
 
 ### 2.2.1 分解描述
@@ -77,48 +87,13 @@ cx已经完成
 目的：启动controllers
 功能列表：解析cmd参数，启动所有controller
 要实现的需求 ID: 解析cmd参数和执行controller
-子模块: 2、3、4、5
-```
-```
-标识：2
-名称：Options
-类型：模块
-目的：解析cmd参数
-功能列表：解析cmd参数
-要实现的需求: cmd支持多级参数，相同名称flag名称在不同controller赋值可以不同
-子模块:
-```
-```
-标识：3
-名称：Config
-类型：模块
-目的：通过Options创建Controller所需Config信息
-功能列表：检验Options、设Default值、赋值
-要实现的需求: 创建Controller所需Config信息
-```
-```
-标识：4
-名称：StartControllers
-类型：模块
-目的：启动controllers
-功能列表：每个Controller定义Start函数、创建ControllerContext会话内容、异步执行StartController
-要实现的需求: 白名单方式启动所有controllers，controller支持不同参数、所有controller异步执行
-子模块:
-```
-```
-标识：5
-名称：Util
-类型：模块
-目的：做Profiling、PrometheusExporter
-功能列表：Profiling、PrometheusExporter
-要实现的需求: Profiling、PrometheusExporter
-子模块:
+子模块: 
 ```
 
-* 2 Queue-Controller 模块描述
+* 2 queue-controller 模块描述
 ```
-标识：6
-名称：Queue-Controller
+标识：2
+名称：queue-controller
 类型：子系统
 目的：描述模块的结构和功能
 功能列表：同步queue实例
@@ -126,19 +101,19 @@ cx已经完成
 子模块:
 ```
 #### 2.2.1.2 并发进程处理分解
-1 Controller-Manager
+1 controller-manager
 ```
 标识：1
-名称：Controller-Manager
+名称：controller-manager
 类型：goroutine
 目的：start 所有controllers
 功能列表：解析cmd参数，start controllers
 ```
 
-2 Queue-Controller
+2 queue-controller
 ```
 标识：2
-名称：QueueController
+名称：queue-controller
 类型：goroutine
 目的：维护Queue状态
 功能列表：同步NS和Queue，维护Queue Status状态
@@ -146,7 +121,99 @@ cx已经完成
 
 
 #### 2.2.1.3 数据分解
-1 Controller-Manager 数据
+```
+标识：1
+名称：ControllerContext
+类型：Struct
+目的：作为ControllerManager运行上下文、提供启动QueueController参数
+```
+```
+标识：2
+名称：QueueControllerStruct
+类型：Struct
+目的：作为QueueController执行的关键数据
+```
+
+### 2.2.2 依赖性描述
+#### 2.2.2.1 运行时设计
+![](./images/2020-05-22-16-36-14.png)
+
+#### 2.2.2.2 数据依赖关系
+![](./images/2020-05-22-16-51-22.png)
+
+### 2.2.3 接口描述
+#### 2.2.3.1 模块/子系统接口
+```
+接口标识 ：1
+接口名称：cmd参数解析
+形式：模块
+输入：cmd flag string
+输出：nil
+返回：controllers启动参数options
+描述：解析cmd参数，并对参数进行校验
+```
+
+```
+接口标识 ：2
+接口名称：Run QueueController
+形式：子系统
+输入：ControllerContext成员变量
+输出：nil
+返回：debugHandler、err
+描述：执行QueueController
+```
+#### 2.2.3.2 Process Interfaces 进程接口
+进程之间没有共享数据
+
+## 2.3 第二层设计描述
+### 2.3.1 controller-manager
+#### 2.3.1.1 分解描述
+![](./images/2020-05-22-17-01-46.png)
+##### 2.3.1.1.1  模块/子系统分解
+1. Cmd Flag Parse
+```
+标识：1
+名称：Options
+类型：模块
+目的：解析cmd参数
+功能列表：解析cmd参数
+要实现的需求: cmd支持多级参数，相同名称flag名称在不同controller赋值可以不同
+子模块:
+```
+2. Start Controllers
+```
+标识：2
+名称：Config
+类型：模块
+目的：通过Options创建Controller所需Config信息
+功能列表：检验Options、设Default值、赋值
+要实现的需求: 创建Controller所需Config信息
+子模块:
+```
+```
+标识：3
+名称：StartControllers
+类型：模块
+目的：启动controllers
+功能列表：每个Controller定义Start函数、创建ControllerContext会话内容、异步执行StartController
+要实现的需求: 白名单方式启动所有controllers，controller支持不同参数、所有controller异步执行
+子模块:
+```
+
+3. Tracing
+```
+标识：4
+名称：Tracing
+类型：模块
+目的：做Profiling、PrometheusExporter
+功能列表：Profiling、PrometheusExporter
+要实现的需求: Profiling、PrometheusExporter
+子模块:
+```
+##### 2.3.1.1.2 并发进程处理分解
+无
+##### 2.3.1.1.3 数据分解
+1 controller-manager 数据
 ```
 标识：1
 名称：Options
@@ -171,89 +238,17 @@ cx已经完成
 类型：Struct
 目的：controller manager 运行上下文
 ```
-
-2 Queue-Controller 数据
-```
-标识：5
-名称：ClusterInfo
-类型：Struct
-目的：Queue关心的集群资源
-```
-```
-标识：6
-名称：QueueControllerStruct
-类型：Struct
-目的：QueueController Struct
-```
-```
-标识：7
-名称：QueueConfig
-类型：Struct
-目的：定义QueueController启动所需参数
-```
-
-### 2.2.2 依赖性描述
-#### 2.2.2.1 运行时设计
-如下图所示、下面主要逻辑是解析cmd参数、options参数赋值给config配置文件、创建ControllerManager会话内容、异步启动所有的控制器。
-![](./images/2020-05-20-16-14-39.png)
-
-#### 2.2.2.2 数据依赖关系
-![](./images/2020-05-20-18-01-23.png)
-
-### 2.2.3 接口描述
-#### 2.2.3.1 模块/子系统接口
-```
-接口标识 ：1
-接口名称：cmd参数解析
-形式：模块
-输入：cmd flag string
-输出：nil
-返回：controllers启动参数options
-描述：解析cmd参数，并对参数进行校验
-```
-
-
-```
-接口标识 ：2
-接口名称：准备Start Controllers
-形式：模块
-输入：Options
-输出：nil
-返回：ControllerContext
-描述：使用Options生成启动Controller所需要的ControllerContext(会话内容)
-```
-
-```
-接口标识 ：3
-接口名称：Run QueueController
-形式：子系统
-输入：ControllerContext成员变量
-输出：nil
-返回：debugHandler、err
-描述：执行QueueController
-```
-#### 2.2.3.2 Process Interfaces 进程接口
-```
-标识：1
-名称：controller-manager 启动
-类型：goRoutine
-目的：启动controllers
-功能列表：解析参数、启动所有controllers
-```
-```
-标识：2
-名称：QueueController
-类型：goRoutine
-目的：维护Queue实例
-功能列表：同步NS和Queue、维护Queue状态
-```
-
-## 2.3 第二层设计描述
-### 2.3.1 QueueController
-* Queue-Controller/Cache: Cache主要是用来同步Queue关注的资源，比如Job、Resource、NS等。这部分并不会包含同步Queue的任何逻辑
-* Queue-Controller/SyncQueue: 实现同步QueueStatus逻辑。该模块根据Queue-Controller/Cache维护的资源来维护Queue
+#### 2.3.1.2  依赖性描述
+##### 2.3.1.2.1 运行设计
+![](./images/2020-05-22-16-33-16.png)
+##### 2.3.1.2.2 数据依赖关系
+![](./images/2020-05-22-17-15-14.png)
+### 2.3.2 QueueController
+* queue-controller/Cache: Cache主要是用来同步Queue关注的资源，比如Job、Resource、NS等。这部分并不会包含同步Queue的任何逻辑
+* queue-controller/SyncQueue: 实现同步QueueStatus逻辑。该模块根据Queue-controller/Cache维护的资源来维护Queue
 ![](./images/2020-05-20-22-32-14.png)
-#### 2.3.1.1 模块/子系统分解
+#### 2.3.2.1 数据分解
+##### 2.3.2.1.1 模块/子系统分解
 1. Cache 模块描述
 ```
 标识：1
@@ -313,7 +308,8 @@ cx已经完成
 ```
 
 
-#### 2.3.1.2 并发进程处理分解
+
+##### 2.3.2.1.2 并发进程处理分解
 ```
 标识：1
 名称：QueueController/Cache
@@ -321,7 +317,6 @@ cx已经完成
 目的：同步Queue关注资源
 功能列表：Cache主要是用来同步Queue关注的资源，比如Job、Resource、NS等。这部分并不会包含同步Queue的任何逻辑
 ```
-
 ```
 标识：2
 名称：QueueController/SyncQueue
@@ -329,18 +324,35 @@ cx已经完成
 目的：维护Queue状态
 功能列表：同步NS和Queue，维护Queue Status状态
 ```
-#### 2.3.1.3 数据分解
-数据较少，放在一级数据分解中描述了
+##### 2.3.2.1.3 数据分解
+```
+标识：1
+名称：ClusterInfo
+类型：Struct
+目的：Queue关心的集群资源
+```
+```
+标识：2
+名称：QueueControllerStruct
+类型：Struct
+目的：QueueController Struct
+```
+```
+标识：3
+名称：QueueConfig
+类型：Struct
+目的：定义QueueController启动所需参数
+```
 
-### 2.3.2  依赖性描述
-#### 2.3.2.1 运行设计
-![](./images/2020-05-20-23-42-23.png)
+#### 2.3.2.2  依赖性描述
+##### 2.3.2.2.1 运行设计
+![](./images/2020-05-22-17-06-56.png)
 
-#### 2.3.2.2 数据依赖关系
-在上一层描述了
+##### 2.3.2.2.2 数据依赖关系
+![](./images/2020-05-22-17-18-00.png)
 
-### 2.3.3 接口描述
-#### 2.3.3.1 模块/子系统接口
+#### 2.3.2.3 接口描述
+##### 2.3.2.3.1 模块/子系统接口
 ```
 接口标识 ：1
 接口名称：cache
@@ -361,25 +373,18 @@ cx已经完成
 描述：同步NS和Queue、维护Queue实例状态
 ```
 
-#### 2.3.3.2 进程接口
-```
-标识：1
-名称：cache
-类型：goRoutine
-目的：更新QueueController关心资源
-功能列表：更新QueueController关心资源
-```
-```
-标识：2
-名称：SyncQueue
-类型：goRoutine
-目的：同步NS和Queue、维护Queue实例状态
-功能列表：同步NS和Queue、维护Queue实例状态、吐出Prometheus监控值
-```
+##### 2.3.2.3.2 进程接口
+无
 
 # 3. 写文档时疑惑的地方
 * 有些package只有写Struct和help func，需要将其作为单独模块描述吗
 * 在化ER图时，一层设计是详细点还是粗略一点好？
   * 一层详细：二层就没什么画的
   * 一层粗略：Struct在一层中不好抽象，即使抽象后、第二层中子系统Struct很多都是孤立的，ER图看起来没什么意义
+* 怎样区分子系统和模块，queue-controller是controller-manager子系统吗？
+* 进程接口和并发进程分解看不出很大区别
 
+
+# 4. 改进
+* controller-manager改进：第一层子模块放到第二层
+* 数据分解 描述公有数据
