--- a/设计模式/23中设计模式/1. 设计模式六大设计原则.md
+++ b/设计模式/23中设计模式/1. 设计模式六大设计原则.md
@@ -17,6 +17,10 @@
     - [2.5.1 接口隔离和单一职责区别](#251-接口隔离和单一职责区别)
     - [2.5.2 接口隔离原则优点](#252-接口隔离原则优点)
         - [2.5.3 接口隔离原则的实现方法](#253-接口隔离原则的实现方法)
+    - [2.6 迪米特法则（类与类之间关系）](#26-迪米特法则类与类之间关系)
+        - [2.6.1 迪米特法则优点](#261-迪米特法则优点)
+        - [2.6.2 迪米特法则缺点](#262-迪米特法则缺点)
+        - [2.6.3 迪米特法则的实现方法](#263-迪米特法则的实现方法)
 
 <!-- /TOC -->
 # 1. 背景
@@ -137,3 +141,31 @@
 * 2. 为依赖接口的类定制服务。只提供调用者需要的方法，屏蔽不需要的方法
 * 3. 谅解环境，拒绝盲从。每个项目或者产品都有选定的环境因素，环境不同，接口拆分标准就不同深入了解业务逻辑
 * 4. 提高类聚，减少对外交互。使接口用最少方法完成最多事情
+
+
+## 2.6 迪米特法则（类与类之间关系）
+迪米特法则（Law of Demeter）定义是：只与你直接朋友交谈，不更陌生人说话。也就是两个软件实体无需直接通信，那就不应该发生直接调用，可以通过第三方转发调用。其目的是降低类之间耦合度，提高模块之间的相对独立性。
+
+迪米特法则中的朋友是指： 当前对象的成员对象、当前对象所创建的对象、当前对象方法参数等。这些对象同当前对象存在关联、聚合、组合关系，可以直接访问这些对象方法。
+
+
+### 2.6.1 迪米特法则优点
+迪米特法则要求限制软件实体之间的通信宽度和深度，正确使用迪米特法则将有以下两个优点。
+* 1. 降低了类之间的耦合度，提高模块之间的相对独立性
+* 2. 由于亲和度降低，从而提高了类的可复用率和系统扩展性
+
+### 2.6.2 迪米特法则缺点
+
+过度使用迪米特法则会产生大量的中介类，从而增加系统复杂性，使得模块之间的通信效率降低。
+
+### 2.6.3 迪米特法则的实现方法
+从迪米特法则的定义和特点可知，强调如下两点：
+* 1. 从依赖者角度来说，只依赖该依赖对象
+* 2. 从被依赖的角度来说，只暴露该暴露方法
+
+所以迪米特法则注意以下6点：
+* 1. 在类的划分上，应该创建类的耦合类。类之间的耦合越弱，越有利于实现可复用目标
+* 2. 在类的结构设计上，尽量降低类成员的访问权限
+* 3. 在类的设计上，优先将一个类设计成不变类
+* 4. 不暴露类的属性成员，而应该提供相应的访问器（set、get）
+* 5. 谨慎使用序列化功能
