--- a/设计模式/23中设计模式/1. 设计模式六大设计原则.md
+++ b/设计模式/23中设计模式/1. 设计模式六大设计原则.md
@@ -1,8 +1,8 @@
 <!-- TOC -->
 
 - [1. 背景](#1-背景)
-- [2. 6大设计原则](#2-6大设计原则)
-    - [2.1 单一自责原则](#21-单一自责原则)
+- [2. 六大设计原则](#2-六大设计原则)
+    - [2.1 单一职责原则](#21-单一职责原则)
         - [2.1.1  单一职责优点](#211--单一职责优点)
         - [2.1.2 单一职责原则的实现方法](#212-单一职责原则的实现方法)
     - [2.2 开闭原则](#22-开闭原则)
@@ -14,8 +14,8 @@
         - [2.4.1 依赖倒置原则的作用](#241-依赖倒置原则的作用)
         - [2.4.2 依赖倒置的实现方法](#242-依赖倒置的实现方法)
     - [2.5 接口隔离原则](#25-接口隔离原则)
-    - [2.5.1 接口隔离和单一职责区别](#251-接口隔离和单一职责区别)
-    - [2.5.2 接口隔离原则优点](#252-接口隔离原则优点)
+        - [2.5.1 接口隔离和单一职责区别](#251-接口隔离和单一职责区别)
+        - [2.5.2 接口隔离原则优点](#252-接口隔离原则优点)
         - [2.5.3 接口隔离原则的实现方法](#253-接口隔离原则的实现方法)
     - [2.6 迪米特法则（类与类之间关系）](#26-迪米特法则类与类之间关系)
         - [2.6.1 迪米特法则优点](#261-迪米特法则优点)
@@ -26,8 +26,8 @@
 # 1. 背景
 六大设计原则相互之间各自具有相关关系，似懂非懂
 
-# 2. 6大设计原则
-## 2.1 单一自责原则
+# 2. 六大设计原则
+## 2.1 单一职责原则
 单一职责原则（Single Responsibllity Priciple,SRP）又称单一功能原则。这里的职责是指类变化的原因，单一职责原则规定一个类应该有且只有一个引起它变化的原因，否则类应该被拆分。
 
 该原则提出对象不应该承担太多职责，如果一个对象承担太多职责,至少存在两个缺点：
@@ -120,13 +120,13 @@
 接口隔离原则（Interface Segregation Principle）要求程序员经量将臃肿庞大的接口拆分成更小和更具体的接口，让接口中只包含客户感兴趣的方法。
 
 
-## 2.5.1 接口隔离和单一职责区别
+### 2.5.1 接口隔离和单一职责区别
 接口隔离原则和单一职责都是为了提高类的内聚性，降低他们之间的耦合性，提现了封装的思想，但是两者是不同的：
 * 单一职责原则注重的是职责，而接口隔离原则注重的是接口依赖的隔离
 * 单一职责原则主要是约束类，他针对程序中实现和细节；接口隔离原则主要约束接口，主要针对抽象程序和程序整体框架构建
 
 
-## 2.5.2 接口隔离原则优点
+### 2.5.2 接口隔离原则优点
 接口隔离原则是为了约束接口、降低类对接口的依赖性，有以下5个优点：
 * 1. 将庞大接口拆分，可以预防外来变更扩散，提高灵活性和维护性
 * 2. 提高系统内聚性，减少对外交互，降低系统耦合性
