--- a/设计模式/23中设计模式/1. 设计模式六大设计原则.md
+++ b/设计模式/23中设计模式/1. 设计模式六大设计原则.md
@@ -3,24 +3,27 @@
 - [1. 背景](#1-背景)
 - [2. 六大设计原则](#2-六大设计原则)
     - [2.1 单一职责原则](#21-单一职责原则)
-        - [2.1.1  单一职责优点](#211--单一职责优点)
+        - [2.1.1  单一职责优点(类具有单一职责)](#211--单一职责优点类具有单一职责)
         - [2.1.2 单一职责原则的实现方法](#212-单一职责原则的实现方法)
-    - [2.2 开闭原则](#22-开闭原则)
+    - [2.2 开闭原则(对扩展开放，对修改关闭)](#22-开闭原则对扩展开放对修改关闭)
         - [2.2.1 开闭原则的实现方法](#221-开闭原则的实现方法)
-    - [2.3 里氏替换原则](#23-里氏替换原则)
+    - [2.3 里氏替换原则（继承时不重写父类方法）](#23-里氏替换原则继承时不重写父类方法)
         - [2.3.1 里氏替换原则作用](#231-里氏替换原则作用)
-        - [2.3.2 里氏替换原则的实现方法（继承）](#232-里氏替换原则的实现方法继承)
-    - [2.4 抽象倒置](#24-抽象倒置)
+        - [2.3.2 里氏替换原则的实现方法](#232-里氏替换原则的实现方法)
+    - [2.4 依赖倒置(使用抽象搭建架构)](#24-依赖倒置使用抽象搭建架构)
         - [2.4.1 依赖倒置原则的作用](#241-依赖倒置原则的作用)
         - [2.4.2 依赖倒置的实现方法](#242-依赖倒置的实现方法)
-    - [2.5 接口隔离原则](#25-接口隔离原则)
+    - [2.5 接口隔离原则(接口依赖隔离)](#25-接口隔离原则接口依赖隔离)
         - [2.5.1 接口隔离和单一职责区别](#251-接口隔离和单一职责区别)
         - [2.5.2 接口隔离原则优点](#252-接口隔离原则优点)
         - [2.5.3 接口隔离原则的实现方法](#253-接口隔离原则的实现方法)
-    - [2.6 迪米特法则（类与类之间关系）](#26-迪米特法则类与类之间关系)
+    - [2.6 迪米特法则（只和直接朋友交谈）](#26-迪米特法则只和直接朋友交谈)
         - [2.6.1 迪米特法则优点](#261-迪米特法则优点)
         - [2.6.2 迪米特法则缺点](#262-迪米特法则缺点)
         - [2.6.3 迪米特法则的实现方法](#263-迪米特法则的实现方法)
+- [3. 六大思想关系](#3-六大思想关系)
+    - [3.1 实体本身](#31-实体本身)
+    - [3.2 实体之间](#32-实体之间)
 
 <!-- /TOC -->
 # 1. 背景
@@ -36,7 +39,7 @@
 * 2. 当一个客户端要该对象的某一个职责时，不得不将其它不需要的职责包含进来，从而造成冗余代码或者代码浪费
 
 
-### 2.1.1  单一职责优点
+### 2.1.1  单一职责优点(类具有单一职责)
 
 单一职责原则是控制类的粒度，将对象解耦，提高内聚性。
 
@@ -50,7 +53,7 @@
 单一职责原则简单但又是最难运用的原则，需要设计人员发现类的不同职责并将其分离，再封装到不同类和模块中。而发现类的多重职责需要设计人员有较强的分析设计能力和相关重构经验。
 
 
-## 2.2 开闭原则
+## 2.2 开闭原则(对扩展开放，对修改关闭)
 
 开闭原则（Open Close Principle）意思是：对扩展开放，对修改关闭。在程序需要进行拓展的时候，不能去修改原有代码，而是应该达到一种热插拔效果。
 
@@ -65,7 +68,7 @@
 
 
 
-## 2.3 里氏替换原则
+## 2.3 里氏替换原则（继承时不重写父类方法）
 里氏提换原则主要阐述关于继承的一些原则，也就是什么时候应该使用继承，什么时候不应该使用继承，以及其中蕴含的一些道理。里氏提换原则是继承复用的基础，他反应了基类和子类自检的关系，是对开闭原则的补充，是对实现抽象化具体步骤的规范。
 
 
@@ -79,8 +82,8 @@
 * 3. 它是动作正确性的保证。即类的扩展不会给已有的系统引入新的错误，降低代码出错可能性
 * 4. 加强程序的健壮性，同时变更可以做到非常好的兼容性，提高程序的维护性、可扩展性、降低风险变更引入的风险
 
-### 2.3.2 里氏替换原则的实现方法（继承）
-里氏替换的原则通俗来讲就是：子类可以扩展父类功能，但不能改变父类原有功能。也就是子类继承父类时，除了添加新的方法完成增补外，经量不要重写父类方法。
+### 2.3.2 里氏替换原则的实现方法
+里氏替换的原则通俗来讲就是：子类可以扩展父类功能，但不能改变父类原有功能。也就是子类继承父类时，除了添加新的方法完成增补外，j尽量不要重写父类方法。
 
 关键原则如下：
 * 1. 子类可以实现父类的抽象方法，但是不能覆盖父类的非抽象方法
@@ -91,7 +94,7 @@
 通过重写父类方法完成新的功能虽然写起来简单，但是整个继承体系的可复用性会变差。特别是运用多态比较频繁时，程序的运行出错概率会非常大。
 
 
-## 2.4 抽象倒置
+## 2.4 依赖倒置(使用抽象搭建架构)
 依赖倒置是实现开闭原则的重要基础之一，它降低了客户与实现模块之间的耦合。
 
 由于在软件设计中，细节具有多变性，而抽象具有相对稳定性，因此以抽象搭建起来的架构要比以细节搭建起来的架构要稳定的多。
@@ -116,7 +119,7 @@
 
 
 
-## 2.5 接口隔离原则
+## 2.5 接口隔离原则(接口依赖隔离)
 接口隔离原则（Interface Segregation Principle）要求程序员经量将臃肿庞大的接口拆分成更小和更具体的接口，让接口中只包含客户感兴趣的方法。
 
 
@@ -143,8 +146,8 @@
 * 4. 提高类聚，减少对外交互。使接口用最少方法完成最多事情
 
 
-## 2.6 迪米特法则（类与类之间关系）
-迪米特法则（Law of Demeter）定义是：只与你直接朋友交谈，不更陌生人说话。也就是两个软件实体无需直接通信，那就不应该发生直接调用，可以通过第三方转发调用。其目的是降低类之间耦合度，提高模块之间的相对独立性。
+## 2.6 迪米特法则（只和直接朋友交谈）
+迪米特法则（Law of Demeter）定义是：只与你直接朋友交谈，不跟陌生人说话。也就是两个软件实体无需直接通信，那就不应该发生直接调用，可以通过第三方转发调用。其目的是降低类之间耦合度，提高模块之间的相对独立性。
 
 迪米特法则中的朋友是指： 当前对象的成员对象、当前对象所创建的对象、当前对象方法参数等。这些对象同当前对象存在关联、聚合、组合关系，可以直接访问这些对象方法。
 
@@ -169,3 +172,15 @@
 * 3. 在类的设计上，优先将一个类设计成不变类
 * 4. 不暴露类的属性成员，而应该提供相应的访问器（set、get）
 * 5. 谨慎使用序列化功能
+
+
+# 3. 六大思想关系
+## 3.1 实体本身
+* 单一职责：约束类单一职责
+* 接口隔离：约束接口隔离
+
+## 3.2 实体之间
+* 开闭原则：软件扩展时，对扩展开放，对修改关闭
+    * 里氏替换原则：只能不能修改父类方法，是开闭原则实现重要方法
+    * 依赖导致：模块之前依赖抽象，不依赖实体类，是开闭原则重要方法
+* 迪米特法则：实体只和直接朋友交互
